--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_fonts: ^4.0.4
   flutter_svg: ^2.0.7
   device_preview: ^1.1.0
+  flutter_screenutil: ^5.8.4
 
 dev_dependencies:
   flutter_test:
