--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   flutter_svg: ^2.0.7
   device_preview: ^1.1.0
   flutter_screenutil: ^5.8.4
+  fluttertoast: ^8.2.2
+  flutter_native_splash: ^2.3.1
 
 dev_dependencies:
   flutter_test:
