--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   flutter_screenutil: ^5.8.4
   fluttertoast: ^8.2.2
   flutter_native_splash: ^2.3.1
+  firebase_core: ^2.15.0
+  firebase_auth: ^4.7.1
+  firebase_storage: ^11.2.5
+  cloud_firestore: ^4.8.3
 
 dev_dependencies:
   flutter_test:
