--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,10 @@ dependencies:
   firebase_auth: ^4.7.1
   firebase_storage: ^11.2.5
   cloud_firestore: ^4.8.3
+  loader_overlay: ^2.3.0
+  google_sign_in: ^6.1.4
+  flutter_facebook_auth: ^6.0.0
+  sign_in_with_apple: ^5.0.0
 
 dev_dependencies:
   flutter_test:
